[package]
name = "hokaku-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.2", default-features = false, features = [
    "csr",
] }
leptos_meta = { version = "0.2", default-features = false, features = [
    "csr",
] }
leptos_router = { version = "0.2", default-features = false, feature = [
    "csr",
] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
